@@ -8,7 +8,7 @@ my $inc = ' -I/home/globus/bin/globus/development/i686-pc-linux-gnu_pthreads_sta
 my $lib = ' -L/home/globus/bin/globus/development/i686-pc-linux-gnu_pthreads_standard_debug/lib' .
           ' -L/home/globus/lib -L/home/globus/bin/ssl/lib -L./src' .
           ' -lglobus_io -lglobus_gss_assist -lglobus_gss -lssl -lcrypto ' .
-          ' -lglobus_gaa -lglobus_common -lpthread -lestar_io -lClient';    
+          ' -lglobus_gaa -lglobus_common -lpthread -lestar_io';    
 
 
 WriteMakefile(
