@@ -16,8 +16,7 @@ $verbose=1;
 BEGIN { plan tests => 5 };
 
 # load modules
-use eSTAR::Globus qw / :all /;
-use eSTAR::IO;
+use eSTAR::IO qw / :all /;
 use eSTAR::IO::Client;
 
 # debugging
@@ -30,20 +29,30 @@ use Data::Dumper;
 ok( 1 );
 
 # status variable
-my ( $status, $handle, $write_status, $close_status );
+my ( $status, $handle, $write_status, $close_status, $reply);
 
 # hardwire the test port and hostname
 my $port = "2000";
-my $host = "bofh";
+my $host = "localhost";
 
-# open the client ----------------------------------------------------------
+# activate modules ----------------------------------------------------------
+
+print "# Activating GLOBUS modules\n";
+$status = module_activate();
+if( $status == GLOBUS_FALSE) {
+   report_error();
+   $status = module_deactivate();
+   exit;
+}
+
+# open the client -----------------------------------------------------------
 
 print "# Opening Client Connection\n";
 $handle = open_client( $host, $port );
 
 unless( defined $handle ) {
    report_error();
-   $status = eSTAR::Globus::deactivate_all();
+   $status = module_deactivate();
    exit;
 } else { ok( 1 ); }
 print "# globus_io_handle_t * " . Dumper($handle) . "#\n";
@@ -57,7 +66,7 @@ $write_status = write_message( $handle, $message );
 
 if( $write_status == GLOBUS_FALSE) {
    report_error();
-   $status = eSTAR::Globus::deactivate_all();
+   $status = module_deactivate();
    exit;
 }
 ok( $write_status, GLOBUS_TRUE );
@@ -67,11 +76,11 @@ print "# Returned $write_status (should be 1)\n#\n";
 
 print "# Reading Message\n";
 
-my $reply = read_message( $handle );
+$reply = read_message( $handle );
 
 unless ( defined $reply ) {
    report_error();
-   $status = eSTAR::Globus::deactivate_all();
+   $status = module_deactivate();
    exit;
 } else { ok ( 1 ); }
 
@@ -84,11 +93,21 @@ $close_status = close_client( $handle );
 
 if( $close_status == GLOBUS_FALSE) {
    report_error();
-   $status = eSTAR::Globus::deactivate_all();
+   $status = module_deactivate();
    exit;
 }
 ok( $close_status, GLOBUS_TRUE );
 print "# Returned $close_status (should be 1)\n#\n";
+
+# deactivate modules --------------------------------------------------------
+
+print "# Deactivating GLOBUS modules\n";
+$status = module_deactivate();
+if( $status == GLOBUS_FALSE) {
+   report_error();
+   $status = module_deactivate();
+   exit;
+}
 
 exit;
 
